--- a/practiscore-export-parser.cabal
+++ b/practiscore-export-parser.cabal
@@ -1,4 +1,5 @@
-cabal-version:      3.14
+cabal-version:   3.0
+
 -- The cabal-version field refers to the version of the .cabal specification,
 -- and can be different from the cabal-install (the tool) version and the
 -- Cabal (the library) version you are using. As such, the Cabal (the library)
@@ -11,7 +12,7 @@ cabal-version:      3.14
 --   http://haskell.org/cabal/users-guide/
 --
 -- The name of the package.
-name:               practiscore-export-parser
+name:            practiscore-export-parser
 
 -- The package version.
 -- See the Haskell package versioning policy (PVP) for standards
@@ -20,7 +21,7 @@ name:               practiscore-export-parser
 -- PVP summary:     +-+------- breaking API changes
 --                  | | +----- non-breaking API additions
 --                  | | | +--- code changes with no API change
-version:            0.1.0.0
+version:         0.1.0.0
 
 -- A short (one-line) description of the package.
 -- synopsis:
@@ -29,45 +30,67 @@ version:            0.1.0.0
 -- description:
 
 -- The license under which the package is released.
-license:            NONE
+license:
 
 -- The package author(s).
-author:             Unknown
+author:          Unknown
 
 -- An email address to which users can send suggestions, bug reports, and patches.
-maintainer:         Unknown
+maintainer:      Unknown
 
 -- A copyright notice.
 -- copyright:
-build-type:         Simple
+build-type:      Simple
 
 -- Extra doc files to be distributed with the package, such as a CHANGELOG or a README.
-extra-doc-files:    CHANGELOG.md
+extra-doc-files: CHANGELOG.md
 
 -- Extra source files to be distributed with the package, such as examples, or a tutorial module.
 -- extra-source-files:
 
-common warnings
-    ghc-options: -Wall
+common common-option
+  ghc-options:
+    -ddump-minimal-imports -Wall -Werror -Wcompat -Wno-name-shadowing
+    -Wno-type-equality-out-of-scope
 
-executable practiscore-export-parser
-    -- Import common warning flags.
-    import:           warnings
+  mixins:
+    base hiding (Prelude),
+    relude (Relude as Prelude),
+    relude
 
-    -- .hs or .lhs file containing the Main module.
-    main-is:          Main.hs
+  default-extensions:
+    ImportQualifiedPost
+    OverloadedRecordDot
+    OverloadedStrings
 
-    -- Modules included in this executable, other than Main.
-    -- other-modules:
+library
+  import:           common-option
+  hs-source-dirs:   src
+  default-language: GHC2021
+  build-depends:
+    , base
+    , bytestring
+    , conduit
+    , megaparsec
+    , parser-combinators
+    , relude
+    , text
 
-    -- LANGUAGE extensions used by modules in this package.
-    -- other-extensions:
+  exposed-modules:  Practiscore.Parser.Shooter
 
-    -- Other library packages from which modules are imported.
-    build-depends:    base ^>=4.20.1.0
+test-suite practiscore-export-parser-test
+  import:         common-option
+  hs-source-dirs: test
+  main-is:        Spec.hs
+  ghc-options:    -main-is Spec
+  type:           exitcode-stdio-1.0
+  build-depends:
+    , base
+    , hspec
+    , megaparsec
+    , practiscore-export-parser
+    , relude
+    , tasty
+    , tasty-hspec
 
-    -- Directories containing source files.
-    hs-source-dirs:   app
-
-    -- Base language which the package is written in.
-    default-language: Haskell2010
+  other-modules:  Spec.Parser.Shooter
