stream parsing shooter

--- a/practiscore-export-parser.cabal
+++ b/practiscore-export-parser.cabal
@@ -71,6 +71,7 @@ library
     , base
     , bytestring
     , cassava
+    , conduit
     , megaparsec
     , optparse-applicative
     , parser-combinators
