--- a/practiscore-export-parser.cabal
+++ b/practiscore-export-parser.cabal
@@ -82,6 +82,10 @@ library
   exposed-modules:
     Practiscore.CLI
     Practiscore.Parser
+    Practiscore.SCSA.Parser.Report
+    Practiscore.SCSA.Parser.Score
+    Practiscore.SCSA.Parser.Shooter
+    Practiscore.SCSA.Parser.Stage
     Practiscore.USPSA
     Practiscore.USPSA.CLI
     Practiscore.USPSA.Match
@@ -107,6 +111,7 @@ test-suite practiscore-export-parser-test
     , tasty-hspec
 
   other-modules:
+    Spec.SCSA.Parser.Report
     Spec.USPSA.Match
     Spec.USPSA.Parser.Report
     Spec.USPSA.Parser.Score
