scsa - division line parser

--- a/practiscore-export-parser.cabal
+++ b/practiscore-export-parser.cabal
@@ -84,6 +84,7 @@ library
     Practiscore.Parser
     Practiscore.SCSA.CLI
     Practiscore.SCSA.Match
+    Practiscore.SCSA.Parser.Division
     Practiscore.SCSA.Parser.Report
     Practiscore.SCSA.Parser.Score
     Practiscore.SCSA.Parser.Shooter
